--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wasm-service",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "API service for running WASM files",
-  "author": "Coherent <fieldengineering@coherent.global>",
+  "author": "Coherent <team@coherent.global>",
   "private": true,
   "keywords": [
     "api",
@@ -36,16 +36,16 @@
     "*.{md,ts,json,yml}": "prettier --write"
   },
   "dependencies": {
-    "@coherentglobal/wasm-runner": "^0.0.103",
-    "@nestjs/axios": "^2.0.0",
-    "@nestjs/common": "^9.4.0",
-    "@nestjs/core": "^9.4.0",
-    "@nestjs/cqrs": "^9.0.0",
-    "@nestjs/platform-express": "^9.4.0",
-    "@nestjs/platform-socket.io": "^9.4.0",
+    "@coherentglobal/wasm-runner": "^0.1.4",
+    "@nestjs/axios": "^3.0.0",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.3.7",
+    "@nestjs/cqrs": "^10.2.7",
+    "@nestjs/platform-express": "^10.3.7",
+    "@nestjs/platform-socket.io": "^10.3.7",
     "@nestjs/swagger": "^7.0.4",
-    "@nestjs/terminus": "^9.2.2",
-    "@nestjs/websockets": "^9.4.0",
+    "@nestjs/terminus": "^10.2.3",
+    "@nestjs/websockets": "^10.3.7",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
@@ -61,7 +61,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.4.0",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.4.0",
+    "@nestjs/testing": "^10.3.7",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/js-yaml": "^4.0.9",
