fix: update formidable to v3.5.4 to resolve security vulnerability
- Added override for formidable@^3.5.4 in package.json
- Regenerated package-lock.json with secure version
- Resolves vulnerability in formidable@2.1.5 used by supertest dependency
- Verified application builds successfully with new version

--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "typescript": "^5.0.0"
   },
   "overrides": {
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "formidable": "^3.5.4"
   },
   "jest": {
     "moduleFileExtensions": [
