--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "lint-staged": "^16.1.2",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "supertest": "^7.1.4",
     "ts-jest": "29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
@@ -91,8 +91,7 @@
     "typescript": "^5.0.0"
   },
   "overrides": {
-    "form-data": "^4.0.0",
-    "formidable": "^3.5.4"
+    "form-data": "^4.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
